# mixx-mk3

./: .gitignore  CLAUDE.md  CMakeLists.txt
docs/: SETUP-GUIDE.md
docs/superpowers/plans/: 2026-03-20-mk3-mixxx-phase1.md  2026-03-31-t9-input.md  2026-04-05-stem-mixer.md
docs/superpowers/specs/: 2026-03-20-mk3-mixxx-integration-design.md  2026-03-31-t9-input-design.md  2026-04-01-mk3-overlay-widget-system-design.md  2026-04-05-stem-mixer-design.md  2026-04-05-tempo-panel-design.md
mapping/: Native-Instruments-Maschine-MK3.js  Native-Instruments-Maschine-MK3.xml
pi-setup/: 99-mk3.rules  mixxx.service  mk3-bootsplash.service  mk3-bootsplash.sh  mk3-button-reader.py  mk3-check-update.sh  mk3-headphone-mirror.service  mk3-headphone-mirror.sh  mk3-mouse-daemon.py  mk3-pi-setup.sh  mk3-screen-daemon.service  mk3-settings-menu.sh  mk3-settings-watcher.py  mk3-settings-watcher.service  mk3-t9-daemon.py  mk3-t9-engine.py  mk3-update.sh  openbox.service  pipewire.service  test_t9_engine.py  wireplumber.service  xvfb.service
pi-setup/mk3_overlay/: daemon.py  focus.py  hid.py  widget.py
pi-setup/mk3_overlay/widgets/: settings.py
pi-setup/tests/: test_hid.py  test_widget.py
screen-daemon/: CMakeLists.txt  capture.h  capture_drm.c  capture_linuxfb.c  capture_x11.c  main.c
skin/MK3/: skin.xml  style.qss
